Config mongo with environment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-server.tomcat.max-threads=5000
-server.compression.enabled: true
+spring.data.mongodb.host=${MONGO_HOST}
+spring.data.mongodb.port=${MONGO_PORT}
