--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-spring.data.mongodb.host=${MONGO_HOST}
-spring.data.mongodb.port=${MONGO_PORT}
+spring.data.mongodb.uri=mongodb://${MONGO_HOST}:${MONGO_PORT}/?waitQueueMultiple=100&maxPoolSize=500
