--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://${MONGO_HOST}:${MONGO_PORT}/?waitQueueMultiple=100&maxPoolSize=500
+spring.data.mongodb.uri=mongodb://${MONGO_HOST}:${MONGO_PORT}/db?waitQueueMultiple=100&maxPoolSize=500
